--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  justify-content: center;
 }
 
 h1,
@@ -35,4 +37,58 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  max-width: 1140px;
+  max-height: 534px;
+  flex-direction: row;
+  align-items: flex-end;
+  gap: 30px;
+  margin-top: 133px;
+  margin-bottom: 133px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  /*align-items: flex-end;*/
+  padding-top: 78px;
+  gap: 16px;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 26px;
+}
+
+.content__details .title {
+  justify-content: flex-start;
+}
+
+.content__list {
+  max-width: 399px;
+  max-height: 298px;
+  overflow-y: auto;
 }
