--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,8 @@ ol {
   list-style: none;
 }
 
+/* 1.0 Задаем Главный Контейнер Content */
+
 .content {
   display: flex;
   max-width: 1140px;
@@ -50,6 +52,8 @@ ol {
   margin-bottom: 133px;
 }
 
+/* 2.0 Задаем Result (Левая Часть Внутри Content) */
+
 .result {
   display: flex;
   flex-direction: column;
@@ -58,15 +62,23 @@ ol {
   gap: 16px;
 }
 
+/* 2.1 Задаем Контейнер Для Видео */
+
 .result__video-container {
   width: 711px;
   height: 386px;
+  overflow: hidden;
 }
+
+/* 2.1.1 Растягиваем Видео Под Контейнер */
 
 .result__video {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
+
+/* 2.2 Задаем Форму */
 
 .search-form {
   display: flex;
@@ -76,19 +88,67 @@ ol {
   width: 100%;
 }
 
+/* 3.0 Задаем Details (Правая Часть Внутри Content) */
+
 .content__details {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   gap: 26px;
+  min-width: 399px;
 }
+
+/* 3.1 Задаем Title */
 
 .content__details .title {
   justify-content: flex-start;
 }
 
+/* 3.2 Задаем Лист Карточек */
+
 .content__list {
-  max-width: 399px;
-  max-height: 298px;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-height: 298px;
+  scrollbar-width: none; /* Скрываем Прокрутку Для Firefox */
+  -ms-overflow-style: none; /* Скрываем Прокрутку Для Internet Explorer 10+ и Edge */
+}
+
+.content__list::-webkit-scrollbar {
+  display: none; /* Скрываем Прокрутку Для WebKit-браузеров, таких как Chrome и Safari */
+}
+
+/* 3.3 Задаем Карточки */
+
+/*Нам нужно чтобы карточки встали в 100% ширины родителя <ul>,*/
+/*Поэтому прокидываем 100% во всех родителях*/
+.content__list-item,
+.content__card-link {
+  width: 100%;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+.content__video-card-description-container{
+  flex-grow: 1;
 }
