--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,7 @@ ol {
 /* 2.1 Задаем Контейнер Для Видео */
 
 .result__video-container {
+  position: relative;
   width: 711px;
   height: 386px;
   overflow: hidden;
@@ -115,6 +116,7 @@ ol {
   max-height: 298px;
   scrollbar-width: none; /* Скрываем Прокрутку Для Firefox */
   -ms-overflow-style: none; /* Скрываем Прокрутку Для Internet Explorer 10+ и Edge */
+  position: relative;
 }
 
 .content__list::-webkit-scrollbar {
@@ -149,6 +151,7 @@ ol {
   flex-shrink: 0;
 }
 
+/*Занимаем Тескстои все оставшееся пространство в карточке*/
 .content__video-card-description-container{
   flex-grow: 1;
 }
