--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,16 @@ ol {
   width: 100%;
 }
 
+/* 2.2.1 Стиль для "Город" и "Время суток" */
+
+.search-form__fieldset-title{
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 /* 3.0 Задаем Details (Правая Часть Внутри Content) */
 
 .content__details {
@@ -103,6 +113,20 @@ ol {
 
 .content__details .title {
   justify-content: flex-start;
+  max-height: 210px;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%; /* 70.5px */
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
 }
 
 /* 3.2 Задаем Лист Карточек */
@@ -127,13 +151,17 @@ ol {
 
 /*Нам нужно чтобы карточки встали в 100% ширины родителя <ul>,*/
 /*Поэтому прокидываем 100% во всех родителях*/
-.content__list-item,
-.content__card-link {
+.content__list-item {
   width: 100%;
+  padding: 2px;
 }
 
-.content__list-item:not(:last-child) {
-  margin-bottom: 30px;
+.content__list-item:not(:first-child) {
+  margin-top: 30px;
+}
+
+.content__card-link {
+  width: 100%;
 }
 
 .content__video-card {
@@ -151,7 +179,31 @@ ol {
   flex-shrink: 0;
 }
 
-/*Занимаем Тескстои все оставшееся пространство в карточке*/
+/*Занимаем Текстом все оставшееся пространство в карточке*/
 .content__video-card-description-container{
   flex-grow: 1;
+}
+
+/* 3.3.1 Задаем Cтили Тексту Карточки */
+
+.content__card-link {
+  text-decoration: none;
+  color: #FFF;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 30px */
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90%;
 }
