Text input focus, Checkbox focus are fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -307,7 +307,7 @@ ol {
   outline: none;
 }
 
-.search-form__label:has(.search-form__textfield:focus-visible) {
+.search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
   outline-offset: 1px;
 }
