--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,9 @@ ol {
 
 .more-button {
   width: 100%;
-  padding: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 30px;
 }
 
 /* 4.0 Состояния элементов формы и кнопок */
@@ -333,6 +335,25 @@ ol {
 
 .search-form__label:hover .search-form__label-text {
   text-decoration: underline;
+}
+
+/* 4.4 Состояния кнопок */
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background: #545050;
 }
 
 /* X. Скрывающий Класс для Работы с Формами */
