--- a/styles/style.css
+++ b/styles/style.css
@@ -235,16 +235,8 @@ ol {
   width: 100%;
 }
 
-.content__list-item {
-  padding: 2px;
-}
-
 .content__list-item:not(:first-child) {
   margin-top: 30px;
-}
-
-.content__card-link {
-  width: 100%;
 }
 
 .content__video-card {
@@ -259,6 +251,9 @@ ol {
   width: 194px;
   height: 103px;
   object-fit: cover;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-right: 2px;
   flex-shrink: 0;
 }
 
@@ -270,8 +265,10 @@ ol {
 /* 3.3.1 Задаем Cтили Тексту Карточки */
 
 .content__card-link {
+  display: block;
   text-decoration: none;
   color: #FFF;
+  margin: 2px;
 }
 
 .content__video-card-title {
@@ -293,11 +290,14 @@ ol {
 
 /* 3.4 Стили для more кнопки */
 
+li:has(> .more-button) {
+  margin-top: 30px;
+}
+
 .more-button {
   width: 100%;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-top: 30px;
 }
 
 /* 4.0 Состояния элементов формы и кнопок */
@@ -354,6 +354,29 @@ ol {
 
 .button:active {
   background: #545050;
+}
+
+/* 4.5 Состояние карточек */
+
+.content__card-link_current {
+  background: #545050;
+}
+
+.content__card-link:focus {
+  outline: 0;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__card-link:active {
+  background: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
 }
 
 /* X. Скрывающий Класс для Работы с Формами */
