--- a/styles/error.css
+++ b/styles/error.css
@@ -11,6 +11,8 @@
   color: #fff;
   font-family: Oswald, sans-serif;
   font-size: 30px;
-  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%; /* 33px */
   text-transform: uppercase;
 }
