--- a/styles/style.css
+++ b/styles/style.css
@@ -9,15 +9,16 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-  display: flex;
-  justify-content: center;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -48,8 +49,6 @@ ol {
   flex-direction: row;
   align-items: flex-end;
   gap: 30px;
-  margin-top: 133px;
-  margin-bottom: 133px;
 }
 
 /* 2.0 Задаем Result (Левая Часть Внутри Content) */
@@ -218,8 +217,6 @@ ol {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
   width: 100%;
   max-height: 298px;
   scrollbar-width: none; /* Скрываем Прокрутку Для Firefox */
@@ -239,6 +236,11 @@ ol {
   width: 100%;
 }
 
+.content__list-item {
+  max-width: 398px;
+  max-height: 107px;
+}
+
 .content__list-item:not(:first-child) {
   margin-top: 30px;
 }
@@ -246,7 +248,7 @@ ol {
 .content__video-card {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
 }
@@ -255,8 +257,9 @@ ol {
   width: 194px;
   height: 103px;
   object-fit: cover;
+  object-position: center;
   flex-shrink: 0;
-  padding: 2px 2px 2px 0;
+  align-self: end;
 }
 
 /*Занимаем Текстом все оставшееся пространство в карточке*/
@@ -265,6 +268,7 @@ ol {
   flex-direction: column;
   gap: 6px;
   max-width: 200px;
+  max-height: 103px;
   flex-grow: 1;
 }
 
@@ -294,13 +298,13 @@ ol {
   font-weight: 400;
   line-height: 90%;
   width: inherit;
-  min-height: 65px;
 }
 
 /* 3.4 Стили для more кнопки */
 
 li:has(> .more-button) {
   margin-top: 30px;
+  /*padding: 3px;*/
 }
 
 .more-button {
@@ -363,8 +367,8 @@ li:has(> .more-button) {
 
 /* 4.5 Состояние карточек */
 
-.content__card-link_current {
-  background: #545050;
+.content__list-item:has(.content__card-link_current) {
+  background-color: #545050;
 }
 
 .content__card-link:focus {
