--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -5,6 +5,13 @@
   font-style: normal;
 }
 
+/*@font-face {*/
+/*  font-family: Oswald;*/
+/*  src: url("Oswald-Regular.ttf") format('ttf');*/
+/*  font-weight: 400;*/
+/*  font-style: normal;*/
+/*}*/
+
 @font-face {
   font-family: 'Fira Sans Condensed';
   src: url(FiraSansCondensed-Regular.woff2) format('woff2'), url(FiraSansCondensed-Regular.woff) format('woff');
