--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,7 @@ ol {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-height: 298px;
+  height: 298px;
   scrollbar-width: none; /* Скрываем Прокрутку Для Firefox */
   -ms-overflow-style: none; /* Скрываем Прокрутку Для Internet Explorer 10+ и Edge */
   position: relative;
