--- a/styles/style.css
+++ b/styles/style.css
@@ -127,9 +127,9 @@ ol {
   cursor: text;
   border: none;
   background: none;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  color: rgba(255, 255, 255, 0.70);
+  color: rgba(255, 255, 255);
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
