--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,7 @@ ol {
   height: 19px;
   border: 1px solid #fff;
   margin-right: 5px;
-  background-color: #1b1919;
+  background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
