--- a/styles/style.css
+++ b/styles/style.css
@@ -232,7 +232,7 @@ ol {
 
 .content__list-item {
   max-width: 398px;
-  max-height: 107px;
+  min-height: 107px;
 }
 
 .content__list-item:not(:first-child) {
