Review: "Максимальную ширину необходимо ограничить по макету на случае переполнения текстом"

--- a/styles/style.css
+++ b/styles/style.css
@@ -294,7 +294,7 @@ ol {
   font-style: normal;
   font-weight: 400;
   line-height: 90%;
-  width: inherit;
+  max-width: 200px;
 }
 
 /* 3.4 Стили для more кнопки */
